fix: discord icon not being extracted bug